@@ -25,6 +25,7 @@ Improvements:
    * Diskselector handles dyanmic show/hide of icons now like buttons.
    * Plug widget handles image object deletion
    * Handle COMPOUND_TEXT cnp
+   * Conformant widget handles displaymode change related with keypad.
 
 Fixes:
 
